--- a/school/views/school_default_view.xml
+++ b/school/views/school_default_view.xml
@@ -3,7 +3,7 @@
     <record id="action_school_student" model="ir.actions.act_window">
         <field name="name">Students</field>
         <field name="res_model">school.student</field>
-        <field name="view_mode">list,form,kanban</field>
+        <field name="view_mode">kanban,form,list</field>
     </record>
 
     <record id="action_school_course" model="ir.actions.act_window">
