--- a/school/views/school_default_view.xml
+++ b/school/views/school_default_view.xml
@@ -15,7 +15,7 @@
     <record id="action_school_teacher" model="ir.actions.act_window">
         <field name="name">Teacher</field>
         <field name="res_model">school.teacher</field>
-        <field name="view_mode">list,form,kanban</field>
+        <field name="view_mode">kanban,form,list</field>
     </record>
 
     <record id="action_school_group" model="ir.actions.act_window">
