--- a/school/views/school_default_view.xml
+++ b/school/views/school_default_view.xml
@@ -4,6 +4,8 @@
         <field name="name">Students</field>
         <field name="res_model">school.student</field>
         <field name="view_mode">kanban,form,list</field>
+        <field name="view_id" ref="view_school_student_kanban"/>
+        <field name="search_view_id" ref="view_school_student_search"/>
     </record>
 
     <record id="action_school_course" model="ir.actions.act_window">
